# argala

./: .gitignore  Cargo.toml  README.md  agent.md  argala_policy.toml  pyproject.toml  test_argala_blocking.py
.claude/: settings.local.json
.github/workflows/: pypi.yml
src/: lib.rs
src/plugins/: cloud_sync.rs  database_guard.rs  destructive_os_guard.rs  jailbreak_guard.rs  mod.rs  pii_leakage_guard.rs  resource_exhaustion_guard.rs
